--- a/practicas/p02/index.html
+++ b/practicas/p02/index.html
@@ -5,7 +5,7 @@
     <title>Inteligencia Financiera</title>
 </head>
 <body>
-    <img src="./images/camino.jpg" alt="Camino a la libertad financiera">
+    <img src="./images/camino.jpg" alt="Camino a la libertad financiera"><br>
     <h1>Hábitos de los Ricos</h1>
 
 <h2>1. Trabaja para ti mismo/a</h2>
