--- a/practicas/p06/formulario.html
+++ b/practicas/p06/formulario.html
@@ -45,10 +45,10 @@
 
     <p>Color <em>(escoge uno)</em>:</p>
       <ul>
-      <li>Rojo</li>
-      <li>Azul</li>
-      <li>Negro</li>
-      <li>Plateado</li>
+        <li><input type="radio" name="color" value="red">Rojo</li>
+        <li><input type="radio" name="color" value="blue">Azul</li>
+        <li><input type="radio" name="color" value="black">Negro</li>
+        <li><input type="radio" name="color" value="plateado">Plateado</li>
       </ul>
 
     <p>Características <em>(escoge tantas como quieras)</em>:</p>
