Detalles con css

--- a/practicas/p06/formulario.html
+++ b/practicas/p06/formulario.html
@@ -37,6 +37,7 @@
     <p>¿Quieres cambiar tus viejos tenis por un par personalizado de Tenis Mike&#174;?<br><br>Justifica el por qué tus tenis se <em>tienen que</em> ir y tú puedes ser uno de los diez afortunados ganadores.</p>
 
     <form action="http://52.43.117.247/neo/classroom/tw/concurso.php" method="POST"> 
+     <h2>Informacion de participación</h2> 
     <fieldset>
       <legend><p>Información del Participante</p></legend>
       <ul>
@@ -76,16 +77,16 @@
         <legend><p>Talla</p></legend>
         <p>Las medidas reflejan el estándar masculino:
         
-        <select>
-          <option name= "size" value="3">3</option>
-          <option name= "size" value="4">4</option>
-          <option name= "size" value="5">5</option>
-          <option name= "size" value="6">6</option>
-          <option name= "size" value="7">7</option>
-          <option name= "size" value="8">8</option>
-          <option name= "size" value="9">9</option>
-          <option name= "size" value="10">10</option>
-          <option name= "size" value="11">11</option></p>
+        <select name= "size">
+          <option  value="3">3</option>
+          <option  value="4">4</option>
+          <option  value="5">5</option>
+          <option  value="6">6</option>
+          <option  value="7">7</option>
+          <option  value="8">8</option>
+          <option  value="9">9</option>
+          <option  value="10">10</option>
+          <option  value="11">11</option></p>
         </select>
       </fieldset>
     </fieldset>
