--- a/practicas/p06/formulario.html
+++ b/practicas/p06/formulario.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html >
+<!DOCTYPE html > 
+
 <html>
+  /*Jessica Belén Ramírez Palacios*/
   <head>
     <meta charset="utf-8" >
     <title>Registro al Concurso</title>
