Editando el set_producto_v2 para insertar los productos

--- a/practicas/p09/formulario_productos.html
+++ b/practicas/p09/formulario_productos.html
@@ -9,7 +9,7 @@
 
     <p>Inserta la información solicitada de tus productos&#169;</p>
 
-    <form id="formularioTenis" action="http://52.43.117.247/neo/classroom/tw/concurso.php" method="post">
+    <form id="formularioProducto" action="http://localhost/tecweb/practicas/p09/set_producto_v2.php" method="post">
 
     <h2>Producto</h2>
 
