--- a/activitis/index.html
+++ b/activitis/index.html
@@ -21,11 +21,58 @@
         <div id="Hola"></div>
         <input type="button" id="clickme" onclick="holaMundo();" value="Hola"></input>
     </fieldset>
-    
     <fieldset>
-        <legend>Ejercicio 2 - Variables_Entradas Operadores</legend>
-        <div id="varUno"></div>
-        <input type="button" id="clickme" onclick="varUno();" value="mostrar"></input>
+        <fieldset>
+            <legend>Ejercicio 2 - Variables</legend>
+            <!-- <html>
+                    <head></head>
+                    <body>
+                    <script type = “text/javascript”>
+
+                        var nombre = ‘Juan’;
+                        var edad = 10
+                        ;
+                        var altura = 1.92
+                        ;
+                        var casado = false
+                        ;
+
+                        document.write( nombre );
+                        document.write( ‘<br>’ );
+                        document.write( edad );
+                        document.write( ‘<br>’ );
+                        document.write( altura );
+                        document.write( ‘<br>’ );
+                        document.write( casado );
+                    </script>
+                    </body>
+                </html>-->
+            <div id="varUno"></div>
+            <input type="button" id="clickme" onclick="varUno();" value="mostrar"></input>
+        </fieldset>
+        <fieldset>
+            <!--
+                <html>
+                    <head></head>
+                    <body>
+                    <script type = “text/javascript”>
+                        var nombre;
+                        var edad;
+                        nombre = prompt(‘Ingresa tu nombre:’, ‘’);
+                        edad = prompt(‘Ingresa tu edad:', ‘’);
+                        document.write(‘Hola ’);
+                        document.write(nombre);
+                        document.write(‘ así que tienes ’);
+                        document.write(edad);
+                        document.write(‘ años’);
+                    </script>
+                    </body>
+                </html>
+            -->
+            <legend>Ejercicio 2.1 - Entradas de datos</legend>
+            <div id="inUno"></div>
+            <input type="button" id="clickme" onclick="inUno();" value="iniciar"></input>
+        </fieldset>
     </fieldset>
 </body>
 </html>
