Ej 3 suma y producto

--- a/activitis/index.html
+++ b/activitis/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1> Actividad</h1>
+
     <fieldset>
         <legend>Ejercicio de ejemplo</legend>
         <div id = "nombre"></div>
@@ -21,6 +22,7 @@
         <div id="Hola"></div>
         <input type="button" id="clickme" onclick="holaMundo();" value="Hola"></input>
     </fieldset>
+
     <fieldset>
         <fieldset>
             <legend>Ejercicio 2 - Variables</legend>
@@ -73,6 +75,27 @@
             <div id="inUno"></div>
             <input type="button" id="clickme" onclick="inUno();" value="iniciar"></input>
         </fieldset>
+    </fieldset>
+
+    <fieldset>
+        <legend>Ejercicio 3 - Estructurada</legend>
+        <div id="Estruct"></div>
+        <!--
+            <script type=“text/javascript”>
+                var valor1;
+                var valor2;
+                valor1 = prompt(‘Introducir primer número:’, ‘’);
+                valor2 = prompt(‘Introducir segundo número’, ‘’);
+                var suma = parseInt(valor1)+parseInt(valor2);
+                var producto = parseInt(valor1)*parseInt(valor2);
+                document.write(‘La suma es ’);
+                document.write(suma);
+                document.write(‘<br>’);
+                document.write(‘El producto es ’);
+                document.write(producto);
+            </script>
+        -->
+        <input type="button" id="clickme" onclick="progEs();" value="Suma y producto"></input>
     </fieldset>
 </body>
 </html>
