Ejercicio de if en html y js

--- a/activitis/index.html
+++ b/activitis/index.html
@@ -79,7 +79,7 @@
 
     <fieldset>
         <legend>Ejercicio 3 - Estructurada</legend>
-        <div id="Estruct"></div>
+        
         <!--
             <script type=“text/javascript”>
                 var valor1;
@@ -95,7 +95,26 @@
                 document.write(producto);
             </script>
         -->
+        <div id="Estruct"></div>
         <input type="button" id="clickme" onclick="progEs();" value="Suma y producto"></input>
+    </fieldset>
+
+    <fieldset>
+        <legend>Ejercicio 3 - Estructurada</legend>
+        
+        <!--
+            <script type=“text/javascript”>
+                var nombre;
+                var nota;
+                nombre = prompt(‘Ingresa tu nombre:’, ‘’);
+                nota = prompt(‘Ingresa tu nota:’, ‘’);
+                if (nota>=4) {
+                document.write(nombre+‘ esta aprobado con un ’+nota);
+                }
+            </script>
+        -->
+        <div id="if"></div>
+        <input type="button" id="clickme" onclick="condIf();" value="Nota final"></input>
     </fieldset>
 </body>
 </html>
