--- a/activitis/index.html
+++ b/activitis/index.html
@@ -100,7 +100,7 @@
     </fieldset>
 
     <fieldset>
-        <legend>Ejercicio 3 - Estructurada</legend>
+        <legend>Ejercicio 3 - Condicion If</legend>
         
         <!--
             <script type=“text/javascript”>
