--- a/activitis/index.html
+++ b/activitis/index.html
@@ -138,6 +138,41 @@
             <div id="ifElse"></div>
             <input type="button" id="clickme" onclick="ifElse();" value="Num Mayor"></input>
         </fieldset>
+
+        <fieldset>
+            <legend>Ejercicio 3 - Condicion IfElse Anidados</legend>
+            
+            <!--
+                <script type=“text/javascript”>
+                    var nota1,nota2,nota3;
+
+                    nota1 = prompt(‘Ingresa 1ra. nota:’, ‘’);
+                    nota2 = prompt(‘Ingresa 2da. nota:’, ‘’);
+                    nota3 = prompt(‘Ingresa 3ra. nota:’, ‘’);
+
+                    //Convertimos los 3 string en enteros
+                    nota1 = parseInt(nota1);
+                    nota2 = parseInt(nota2);
+                    nota3 = parseInt(nota3);
+
+                    var pro;
+                    pro = (nota1+nota2+nota3)/3;
+                    if (pro>=7) {
+                    document.write(‘aprobado’);
+                    }
+                    else {
+                    if (pro>=4) {
+                    document.write(‘regular’);
+                    }
+                    else {
+                    document.write(‘reprobado’);
+                    }
+                    }
+                </script>
+            -->
+            <div id="ifElseAn"></div>
+            <input type="button" id="clickme" onclick="ifAnidados();" value="Promedio"></input>
+        </fieldset>
     </fieldset>
 </body>
 </html>
