--- a/activitis/index.html
+++ b/activitis/index.html
@@ -173,6 +173,45 @@
             <div id="ifElseAn"></div>
             <input type="button" id="clickme" onclick="ifAnidados();" value="Promedio"></input>
         </fieldset>
+
+        <fieldset>
+            <legend>Ejercicio 3 - Switch</legend>
+            
+            <!--
+                <script type=“text/javascrip”>
+                    var valor;
+                    valor = prompt(‘Ingresar un valor comprendido entre 1 y 5:’, ‘’ );
+                    //Convertimos a entero
+                    valor = parseInt(valor);
+                    switch (valor) {
+                    case 1: document.write(‘uno’);
+
+                    break;
+
+                    case 2: document.write(‘dos’);
+
+                    break;
+
+                    case 3: document.write(‘tres’);
+
+                    break;
+
+                    case 4: document.write(‘cuatro’);
+
+                    break;
+
+                    case 5: document.write(‘cinco’);
+
+                    break;
+
+                    default:document.write(‘debe ingresar un valor comprendido entre
+                    1 y 5.’);
+                    }
+                </script>
+            -->
+            <div id="suich"></div>
+            <input type="button" id="clickme" onclick="suich();" value="1-5"></input>
+        </fieldset>
     </fieldset>
 </body>
 </html>
