Terminado switch para el background

--- a/activitis/index.html
+++ b/activitis/index.html
@@ -213,7 +213,7 @@
             <input type="button" id="clickme" onclick="suich();" value="1-5"></input>
         </fieldset>
 
-        <fieldset></fieldset>
+        <fieldset>
             <legend>Ejercicio 3.5 - Switch Color</legend>
             
             <!--
@@ -238,7 +238,7 @@
                 </script>
             -->
             <div id="suichColor"></div>
-            <input type="button" id="clickme" onclick="suichColor();" value="Color BG"></input>
+            <input type="button" id="clickme" onclick="suichBG();" value="Color BG"></input>
         </fieldset>
     </fieldset>
 </body>
