Iterar del uno al cien

--- a/activitis/index.html
+++ b/activitis/index.html
@@ -241,5 +241,44 @@
             <input type="button" id="clickme" onclick="suichBG();" value="Color BG"></input>
         </fieldset>
     </fieldset>
+
+    <fieldset>
+        <fieldset>
+            <legend>Ejercicio 4.1 - While</legend>
+            <!-- 
+            <script type=“text/javascript”>
+                var x;
+                x=1;
+                while (x<=100) {
+                document.write(x);
+                document.write(‘<br>’);
+                x=x+1;
+                }
+            </script>
+            -->
+            <div id="unoAC"></div>
+            <input type="button" id="clickme" onclick="unoCien();" value="1-100"></input>
+        </fieldset>
+
+        <fieldset>
+            <!--
+                <script type=“text/javascript”>
+                    var x=1;
+                    var suma=0;
+                    var valor;
+                    while (x<=5){
+                    valor = prompt(‘Ingresa el valor:’, ‘’);
+                    valor = parseInt(valor);
+                    suma = suma+valor;
+                    x = x+1;
+                    }
+                    document.write(“La suma de los valores es ”+suma+“<br>”);
+                </script>
+            -->
+            <legend>Ejercicio 4.2 - Entradas de datos</legend>
+            <div id="inUno"></div>
+            <input type="button" id="clickme" onclick="inUno();" value="iniciar"></input>
+        </fieldset>
+    </fieldset>
 </body>
 </html>
