--- a/activitis/index.html
+++ b/activitis/index.html
@@ -275,9 +275,35 @@
                     document.write(“La suma de los valores es ”+suma+“<br>”);
                 </script>
             -->
-            <legend>Ejercicio 4.2 - Entradas de datos</legend>
-            <div id="inUno"></div>
-            <input type="button" id="clickme" onclick="inUno();" value="iniciar"></input>
+            <legend>Ejercicio 4.2 - Suma de datos</legend>
+            <div id="sumC"></div>
+            <input type="button" id="clickme" onclick="sumaCinco();" value="iniciar Suma"></input>
+        </fieldset>
+
+        <fieldset></fieldset>
+            <!--
+                <script type = “text/javascript”>
+                    var valor;
+                    do{
+                    valor = prompt(‘Ingresa un valor entre 0 y 999:’, ‘’);
+                    valor = parseInt(valor);
+                    document.write(‘El valor ’+valor+‘ tiene ’);
+                    if (valor<10)
+                    document.write(‘Tiene 1 dígitos’)
+                    else
+                    if (valor<100) {
+                    document.write(‘Tiene 2 dígitos’);
+                    }
+                    else {
+                    document.write(‘Tiene 3 dígitos’);
+                    }
+                    document write(‘<br>’);
+                    }while(valor!=0);
+                </script>
+            -->
+            <legend>Ejercicio 4.3 - Identificador de digitos</legend>
+            <div id="digit"></div>
+            <input type="button" id="clickme" onclick="digitos();" value="Insertar numero"></input>
         </fieldset>
     </fieldset>
 </body>
