Digitos contador finalizado

--- a/activitis/index.html
+++ b/activitis/index.html
@@ -280,7 +280,7 @@
             <input type="button" id="clickme" onclick="sumaCinco();" value="iniciar Suma"></input>
         </fieldset>
 
-        <fieldset></fieldset>
+        <fieldset>
             <!--
                 <script type = “text/javascript”>
                     var valor;
