--- a/activitis/index.html
+++ b/activitis/index.html
@@ -305,6 +305,21 @@
             <div id="digit"></div>
             <input type="button" id="clickme" onclick="digitos();" value="Insertar numero"></input>
         </fieldset>
+
+        <fieldset>
+            <!--
+                <script type=“text/javascript”>
+                    var f;
+                    for(f=1; f<=10; f++)
+                    {
+                    document.write(f+“ ”);
+                    }
+                </script>
+            -->
+            <legend>Ejercicio 4.4 - Escribir del 1 al 10</legend>
+            <div id="for"></div>
+            <input type="button" id="clickme" onclick="unoDiez();" value="1-10"></input>
+        </fieldset>
     </fieldset>
 </body>
 </html>
