--- a/activitis/index.html
+++ b/activitis/index.html
@@ -321,5 +321,81 @@
             <input type="button" id="clickme" onclick="unoDiez();" value="1-10"></input>
         </fieldset>
     </fieldset>
+
+    <fieldset>
+        <fieldset>
+            <legend>Ejercicio 5.1 - Implementación</legend>
+            <!-- 
+            <script type = “text/javascript”>
+                document.write(“Cuidado<br>”);
+                document.write(“Ingresa tu documento correctamente<br>”);
+                document.write(“Cuidado<br>”);
+                document.write(“Ingresa tu documento correctamente<br>”);
+                document.write(“Cuidado<br>”);
+                document.write(“Ingresa tu documento correctamente<br>”);
+            </script>
+            -->
+            <div id="imp"></div>
+            <input type="button" id="clickme" onclick="doc();" value="document"></input>
+        </fieldset>
+
+        <fieldset>
+            <!--
+                <script type=“text/javascript”>
+                    function mostrarMensaje() {
+                    document.write(“Cuidado<br>”);
+                    document.write(“Ingresa tu documento correctamente<br>”);
+                    }
+                    mostrarMensaje();
+                    mostrarMensaje();
+                    mostrarMensaje();
+                </script>
+            -->
+            <legend>Ejercicio 5.2 - Función dentro de función</legend>
+            <div id="func"></div>
+            <input type="button" id="clickme" onclick="message();" value="iniciar Suma"></input>
+        </fieldset>
+
+        <fieldset>
+            <!--
+                <script type = “text/javascript”>
+                    var valor;
+                    do{
+                    valor = prompt(‘Ingresa un valor entre 0 y 999:’, ‘’);
+                    valor = parseInt(valor);
+                    document.write(‘El valor ’+valor+‘ tiene ’);
+                    if (valor<10)
+                    document.write(‘Tiene 1 dígitos’)
+                    else
+                    if (valor<100) {
+                    document.write(‘Tiene 2 dígitos’);
+                    }
+                    else {
+                    document.write(‘Tiene 3 dígitos’);
+                    }
+                    document write(‘<br>’);
+                    }while(valor!=0);
+                </script>
+            -->
+            <legend>Ejercicio 4.3 - Identificador de digitos</legend>
+            <div id="digit"></div>
+            <input type="button" id="clickme" onclick="digitos();" value="Insertar numero"></input>
+        </fieldset>
+
+        <fieldset>
+            <!--
+                <script type=“text/javascript”>
+                    var f;
+                    for(f=1; f<=10; f++)
+                    {
+                    document.write(f+“ ”);
+                    }
+                </script>
+            -->
+            <legend>Ejercicio 4.4 - Escribir del 1 al 10</legend>
+            <div id="for"></div>
+            <input type="button" id="clickme" onclick="unoDiez();" value="1-10"></input>
+        </fieldset>
+    </fieldset>
 </body>
 </html>
