Función pasando variable show

--- a/activitis/index.html
+++ b/activitis/index.html
@@ -353,7 +353,7 @@
             -->
             <legend>Ejercicio 5.2 - Función dentro de función</legend>
             <div id="func"></div>
-            <input type="button" id="clickme" onclick="message();" value="iniciar Suma"></input>
+            <input type="button" id="clickme" onclick="message();" value="Mensaje"></input>
         </fieldset>
 
         <fieldset>
