--- a/activitis/index.html
+++ b/activitis/index.html
@@ -359,42 +359,81 @@
         <fieldset>
             <!--
                 <script type = “text/javascript”>
-                    var valor;
-                    do{
-                    valor = prompt(‘Ingresa un valor entre 0 y 999:’, ‘’);
-                    valor = parseInt(valor);
-                    document.write(‘El valor ’+valor+‘ tiene ’);
-                    if (valor<10)
-                    document.write(‘Tiene 1 dígitos’)
-                    else
-                    if (valor<100) {
-                    document.write(‘Tiene 2 dígitos’);
+                    function mostrarRango(x1,x2) {
+                    var inicio;
+                    for(inicio=x1; inicio<=x2; inicio++) {
+                    document.write(inicio+‘ ’);
+
                     }
-                    else {
-                    document.write(‘Tiene 3 dígitos’);
                     }
-                    document write(‘<br>’);
-                    }while(valor!=0);
+                    var valor1,valor2;
+                    valor1 = prompt(‘Ingresa el valor inferior:’, ‘’);
+                    valor1 = parseInt(valor1);
+                    valor2 = prompt(‘Ingresa el valor superior:’, ‘’);
+                    valor2 = parseInt(valor2);
+                    mostrarRango(valor1,valor2);
                 </script>
             -->
-            <legend>Ejercicio 4.3 - Identificador de digitos</legend>
-            <div id="digit"></div>
-            <input type="button" id="clickme" onclick="digitos();" value="Insertar numero"></input>
+            <legend>Ejercicio 5.3 - Mostrar rangos</legend>
+            <div id="rang"></div>
+            <input type="button" id="clickme" onclick="valores();" value="Rangos"></input>
         </fieldset>
 
         <fieldset>
             <!--
-                <script type=“text/javascript”>
-                    var f;
-                    for(f=1; f<=10; f++)
-                    {
-                    document.write(f+“ ”);
+                <script type="text/javascript">
+                    function convertirCastellano(x) {
+
+                    if(x==1)
+                    return “uno”;
+                    else
+                    if(x==2)
+
+                    return “dos”;
+                    else
+                    if(x==3)
+                    return “tres”;
+                    else
+                    if(x==4)
+
+                    return “cuatro”;
+
+                    else
+
+                    if(x==5)
+                    return “cinco”;
+                    else
+                    return “valor incorrecto”;
+
                     }
+                    var valor = prompt(“Ingresa un valor entre 1 y 5”, “”);
+                    valor = parseInt(valor);
+                    var r = convertirCastellano(valor);
+                    document.write(r);
                 </script>
             -->
-            <legend>Ejercicio 4.4 - Escribir del 1 al 10</legend>
-            <div id="for"></div>
-            <input type="button" id="clickme" onclick="unoDiez();" value="1-10"></input>
+            <legend>Ejercicio 5.4 - Convertir numeros a castellano</legend>
+            <div id="caste"></div>
+            <input type="button" id="clickme" onclick="convert();" value="castellano"></input>
+        </fieldset>
+
+        <fieldset>
+            <!--
+               function convertirCastellano(x) {
+                    switch (x) {
+                        case 1: return "uno";
+                        case 2: return "dos";
+                        case 3: return "tres";
+                        case 4: return "cuatro";
+                        case 5: return "cinco";
+                        default: return "valor incorrecto";
+                    }
+                }
+                </script>
+            -->
+            <legend>Ejercicio 5.5 - Castellano v2</legend>
+            <div id="castell"></div>
+            <input type="button" id="clickme" onclick="convertir();" value="castellano"></input>
         </fieldset>
     </fieldset>
 </body>
