--- a/practicas/p10/venta_alimentos/formulario_productos.html
+++ b/practicas/p10/venta_alimentos/formulario_productos.html
@@ -69,7 +69,7 @@
     </fieldset>
     <fieldset>
       <legend><p>Ruta</p></legend>
-      <label for="form-image">Ruta de imagen: </label><input type="text" name="image" id="imagen" value="./image.png" placeholder="./Docs..."><img src="image.png" width="50" height="50">
+      <label for="form-image">Ruta de imagen: </label><input type="text" name="image" id="imagen" value="image.png" placeholder="./Docs...">
     </fieldset>
 
       
