--- a/practicas/p10/venta_alimentos/formulario_productos.html
+++ b/practicas/p10/venta_alimentos/formulario_productos.html
@@ -42,13 +42,13 @@
 
     <p>Inserta la información solicitada de tus productos&#169;</p>
 
-    <form id="formularioProducto" action="http://localhost/tecweb/practicas/p10" method="post">
+    <form id="formularioProducto" action="http://localhost/tecweb/practicas/p10/venta_alimentos/set_producto_v2.php" method="post">
 
     <h2>Producto</h2>
 
       <fieldset>
         <legend>Información</legend>
-        <label for="form-name">Nombre del Producto:</label> <input type="text" name="name" id="nombre" maxlength="100" >
+        <label for="form-name">Nombre del Producto:</label> <input type="text" name="name" id="name" maxlength="100" >
 
         <ul>
           
@@ -70,7 +70,7 @@
     </fieldset>
     <fieldset>
       <legend><p>Ruta</p></legend>
-      <label for="form-image">Ruta de imagen: </label><input type="text" name="image" id="imagen" value="image.png" placeholder="./Docs...">
+      <label for="form-image">Ruta de imagen: </label><input type="text" name="image" id="image" value="image.png" placeholder="./Docs...">
     </fieldset>
 
       
