--- a/practicas/p11/product_app/index.html
+++ b/practicas/p11/product_app/index.html
@@ -9,12 +9,11 @@
     <!-- BARRA DE NAVEGACIÓN  -->
     <nav>
       <a href="#">Product App</a>
-      
-        <ul></ul>
-        <form>
-          <input name="search" id="search" type="search" placeholder="ID">
-          <button type="submit" onclick="buscarID(event)">Buscar</button>
-        </form>
+      <ul></ul>
+      <form id="search-form">
+        <input name="search" id="search" type="search" placeholder="Buscar producto">
+        <button type="submit">Buscar</button>
+      </form>
     </nav>
 
     <div>
@@ -28,7 +27,7 @@
             <textarea id="description" cols="30" rows="10" placeholder="JSON de producto"></textarea>
           </div>
           <input type="hidden" id="taskId">
-          <button type="submit" onclick="agregarProducto(event)" >
+          <button type="submit" onclick="agregarProducto(event)">
             Agregar Producto
           </button>
         </form>
@@ -36,14 +35,12 @@
 
       <!-- TABLA  -->
       <div>
-        <ul></ul>
-
         <table>
           <thead>
             <tr>
               <td>Id</td>
               <td>Nombre</td>
-              <td>Descripcion</td>
+              <td>Descripción</td>
             </tr>
           </thead>
           <tbody id="productos"></tbody>
