Editando database, create y read

--- a/practicas/p10/venta_alimentos/formulario_productos.html
+++ b/practicas/p10/venta_alimentos/formulario_productos.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
         function verificarRegistro()
         {
-            var nom=document.getElementById('nombre').value();
+            var nom=document.getElementById('name').value();
             var mod=document.getElementById('model').value.trim();
             
 
