Modificando el editar

--- a/practicas/p12/p12_con_jquery/product_app/index.html
+++ b/practicas/p12/p12_con_jquery/product_app/index.html
@@ -46,7 +46,7 @@
           </div>
         </div>
 
-        <!-- TABLA  -->
+        <!-- TABLA DE PRODUCTOS -->
         <div class="col-md-7">
           <div class="card my-4 d-none" id="product-result">
             <div class="card-body">
@@ -61,6 +61,7 @@
                 <td>Id</td>
                 <td>Nombre</td>
                 <td>Descripción</td>
+                <td>Acciones</td> <!-- Nueva columna para los botones -->
               </tr>
             </thead>
             <tbody id="products"></tbody>
@@ -75,5 +76,4 @@
     <!-- Lógica del Frontend -->
     <script src="app.js"></script>
   </body>
-
 </html>
