--- a/actividades/a07/index.html
+++ b/actividades/a07/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="form-group has-danger has-success">
                   <label for="precio">Precio del producto:</label>
-                  <input class="form-control" type="number" id="precio" placeholder="Precio de producto">
+                  <input class="form-control" type="number" id="precio" step="0.01" min="99.99" placeholder="99.99" required>
                   <div class="invalid-feedback">El precio debe ser mayor a 99.99</div>
                   <div class="valid-feedback">Precio válido</div>
                 </div>
