--- a/practicas/p13/product_app/index.html
+++ b/practicas/p13/product_app/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="form-group has-danger has-success">
                   <label for="precio">Precio del producto:</label>
-                  <input class="form-control" type="number" id="precio" placeholder="Precio de producto">
+                  <input class="form-control" type="number" id="precio"  step="0.01" min="99.99" placeholder="99.99" required>
                   <div class="invalid-feedback">El precio debe ser mayor a 99.99</div>
                   <div class="valid-feedback">Precio válido</div>
                 </div>
@@ -56,18 +56,10 @@
                   <div class="valid-feedback">Modelo válido</div>
                 </div>
                 <div class="form-group has-danger has-success">
-                  <label for="marca">Marca del producto:</label>
-                  <select class="form-control" id="marca" aria-placeholder="">
-                    <option value=""></option>
-                    <option value="Nike">Nike</option>
-                    <option value="Adidas">Adidas</option>
-                    <option value="Puma">Puma</option>
-                    <option value="Pirma">Pirma</option>
-                    <option value="Under Armour">Under Armour</option>
-                    <option value="Kappa">Kappa</option>
-                  </select>
-                  <div class="invalid-feedback">La marca debe ser valida</div>
-                  <div class="valid-feedback">Marca válida</div>
+                  <label for="marca">Marca:</label>
+                  <input class="form-control" type="text" id="marca" placeholder="Marca">
+                  <div class="invalid-feedback">Marca no aceptable</div>
+                  <div class="valid-feedback">Marca válido</div>
                 </div>
                 <div class="form-group has-danger has-success">
                   <label for="detalles">Detalles:</label>
